--- a/index.html
+++ b/index.html
@@ -1,75 +1,87 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <title>Document</title>
-    <link href="./code.css" rel="stylesheet" type="text/css" />
+<title>HTML Table</title>
 </head>
 <body>
-    <h1>Hello</h1>
+<form method="" action="">
+<table border="1" align="center" width="500"  >
+<caption>Registration form</caption>
+<tr>
+<th>First name</th>
+<td><input type="text" name="fn" id="fn1" maxlength="10" title="enter your first name"/></td>
+</tr>
+<tr>
+  <th>Last name</th>
+  <td><input type="text"/></td>
+  </tr>
+<tr>
+  <th>Email</th>
+  <td><input type="email"/></td>
+  </tr>
+<tr>
+<th>Password</th>
+<td><input type="password"/></td>
+</tr>
+<tr>
+<th>ReEnter Password</th>
+<td><input type="password"/></td>
+</tr>
+<tr>
+  <th>Gender</th>
+  <td>
+  male<input type="radio" name="g" value="m"/>
+  female<input type="radio" name="g" value="f"/>
+  </td>
+  </tr>
+  <tr>
+    <th>Age</th>
+    <td><input type="text"/></td>
+    </tr>
+  <tr>
+    <th>DOB</th>
+    <td><input type="date"/></td>
+  </tr>
+<tr>
+<th>Mobile number</th>
+<td><input type="number"/></td>
+</tr>
+<tr>
+<th>Address</th>
+<td><textarea rows="8" cols="20"></textarea></td>
+</tr>
+<tr>
+<th>Country</th>
+<td>
+<select name="country">
+<option value="" selected="selected" disabled="disabled">Select your country</option>
+<option value="1">India</option>
+<option value="2">Pakistan</option>
+</select>
+</td>
+</tr>
+<tr>
+  <th>Languages known</th>
+  <td>
+  <input type="checkbox" name="g" value="m"/>English
+  <input type="checkbox" name="g" value="f"/>Kannada
+  <input type="checkbox" name="g" value="f"/>Telugu
+  <input type="checkbox" name="g" value="f"/>Hindi
+  </td>
+  </tr>
+<tr>
+  <td colspan="2" align="left"><input type="checkbox"/>Hereby I declare all the given details are true
+</td>
+</tr>
+<tr>
+  <td colspan="2" align="right"><a>Login to <a href="URL">Ethnus</a> website</a>
+</td>
+</tr>
+<!-- <button type="save" class="registerbtn">Register</button> -->
+</table>
+<tr>
+  <td colspan="2" align="center"><input type="submit" value="Register"/>
+  </td>
+  </tr>
+</form>
 </body>
-</html> -->
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <form>
-      <!-- semantic element-> used to increase understandability of code  -->
-      <label for="FirstName">First Name</label>
-      <input
-        type="text"
-        name="FirstName"
-        placeholder="Enter first name"
-      /><br /><br />
-      <label for="LastName">Last Name</label>
-      <input
-        type="text"
-        name="LastName"
-        placeholder="Enter last name"
-      /><br /><br />
-      <label for="Surname">Surname</label>
-      <input type="text" name="Surname" placeholder="Enter Surname" />
-      <br /><br />
-      <label for="Email">Email</label>
-      <input type="email" name="Email" placeholder="Enter email" /><br /><br />
-      <!-- email input is self validating -->
-      <label for="password">Password</label>
-      <input
-        type="password"
-        name="password"
-        placeholder="Enter password"
-      /><br /><br />
-      <label for="phone">Contact</label>
-      <input type="tel" name="phone" /><br /><br />
-      <label for="number">Number</label>
-      <input type="number" name="number" /><br /><br />
-      <p>Enter gender</p>
-      <!-- for radio inputs, name should be common but id and value should differ -->
-      <!-- id is used for differentiation, value is used for telling JS what value will it hold -->
-      <!-- for attribute can take in name and id -->
-      <input type="radio" name="gender" id="male" value="male"
-      <label for="Hindi">Hindi</label>
-      <input type="checkbox" name="Hindi" value="Hindi" />
-      <label for="English">English</label>
-      <input type="checkbox" name="English" value="English" />
-      <!-- new form elements which are added in HTML 5 -->
-      <p>Rate yourself</p>
-      <input type="range" /><br /><br />
-      <label for="Date">Date</label>
-      <input type="date" name="Date" />
-      <br /><br />
-      <label for="DateTime">Date Time</label>
-      <input type="datetime" name="DateTime"/>
-      <br /><br />
-      <label for="currentDT">Date Time</label>
-      <input type="datetime" name="DateTime" />
-      <br /><br />
-      <label for="currentDT">Current Date And Time</label>
-      <input type="datetime-local" name="currentDT" />
-      <input type="submit" />
-    </form>
-  </body>
 </html>
