--- a/index.html
+++ b/index.html
@@ -1,88 +1,97 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<title>HTML Table</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tasks Index</title>
+    <style>
+        table,th,td
+        {
+            border: 2px solid black;
+        }
+        table
+        {
+            border-collapse: collapse;
+            width: 400px;
+        }
+        td
+        {
+            text-align: center;
+            padding: 5px;
+        }
+        th
+        {
+            padding: 5px;
+            font-size:larger;
+        }
+    </style>
 </head>
 <body>
-<form method="" action="">
-<table border="1" align="center" width="500"  >
-<caption>Registration form</caption>
+    <h1><center>Index</center></h1>
+    <center>
+    <table>
+        <tr>
+            <th>Tasks</th>
+            <th>Links</th>
+        </tr>
 <tr>
-<th>First name</th>
-<td><input type="text" name="fn" id="fn1" maxlength="10" title="enter your first name"/></td>
+    <td>Task 1</td>
+    <td><a href="Task1.html" target="_blank">Link</a></td>
 </tr>
 <tr>
-  <th>Last name</th>
-  <td><input type="text"/></td>
-  </tr>
-<tr>
-  <th>Email</th>
-  <td><input type="email"/></td>
-  </tr>
-<tr>
-<th>Password</th>
-<td><input type="password"/></td>
+    <td>Task 2</td>
+    <td><a href="Task2.html" target="_blank">Link</a></td>
 </tr>
 <tr>
-<th>ReEnter Password</th>
-<td><input type="password"/></td>
+    <td>Task 3</td>
+    <td><a href="Task3.html" target="_blank">Link</a></td>
 </tr>
 <tr>
-  <th>Gender</th>
-  <td>
-  male<input type="radio" name="g" value="m"/>
-  female<input type="radio" name="g" value="f"/>
-  </td>
-  </tr>
-  <tr>
-    <th>Age</th>
-    <td><input type="text"/></td>
-    </tr>
-  <tr>
-    <th>DOB</th>
-    <td><input type="date"/></td>
-  </tr>
-<tr>
-<th>Mobile number</th>
-<td><input type="number"/></td>
+    <td>Task 4</td>
+    <td><a href="Task4.html" target="_blank">Link</a></td>
 </tr>
-<tr>
-<th>Address</th>
-<td><textarea rows="8" cols="20"></textarea></td>
-</tr>
-<tr>
-<th>Country</th>
-<td>
-<select name="country">
-<option value="" selected="selected" disabled="disabled">Select your country</option>
-<option value="1">India</option>
-<option value="2">Pakistan</option>
-</select>
-</td>
-</tr>
-<tr>
-  <th>Languages known</th>
-  <td>
-  <input type="checkbox" name="g" value="m"/>English
-  <input type="checkbox" name="g" value="f"/>Kannada
-  <input type="checkbox" name="g" value="f"/>Telugu
-  <input type="checkbox" name="g" value="f"/>Hindi
-  </td>
-  </tr>
-<tr>
-  <td colspan="2" align="left"><input type="checkbox"/>Hereby I declare all the given details are true
-</td>
-</tr>
-<tr>
-  <td colspan="2" align="right"><a>Login to <a href="URL">Ethnus</a> website</a>
-</td>
-</tr>
-<!-- <button type="save" class="registerbtn">Register</button> -->
-<tr>
-  <td colspan="2" align="center"><input type="submit" value="Register"/>
-  </td>
-  </tr>
-</table>
 
-</form>
+<tr>
+    <td>Task 5</td>
+    <td><a href="Task5.html" target="_blank">Link</a></td>
+</tr>
+
+<tr>
+    <td>Task 6</td>
+    <td><a href="Task6.html" target="_blank">Link</a></td>
+</tr>
+
+<tr>
+    <td>Task 7</td>
+    <td><a href="Task7.html" target="_blank">Link</a></td>
+</tr>
+
+<tr>
+    <td>Task 8</td>
+    <td><a href="Task8.html" target="_blank">Link</a></td>
+</tr>
+
+<tr>
+    <td>Task 9</td>
+    <td><a href="Task9.html" target="_blank">Link</a></td>
+</tr>
+
+<tr>
+    <td>Task 10</td>
+    <td><a href="Task10.html" target="_blank">Link</a></td>
+</tr>
+
+<tr>
+    <td>Task 11</td>
+    <td><a href="Task11.html" target="_blank">Link</a></td>
+</tr>
+
+<tr>
+    <td>Task 12</td>
+    <td><a href="Task12.html" target="_blank">Link</a></td>
+</tr>
+
+    </table>
+</center>
 </body>
 </html>
